@@ -7,14 +7,14 @@ import cookielib
 import xbmc
 import xbmcgui
 import xbmcplugin
-import xbmcaddon
 
 from elementtree import ElementTree
 import danishaddons
 import danishaddons.web
 
 URL = 'http://yousee.tv/feeds/player/livetv/%s/'
-FANART = os.getcwd() + '/fanart.jpg'
+LOGIN1_URL = 'https://login.yousee.dk'
+LOGIN2_URL = 'http://yousee.tv/sso/login'
 
 class YouseeTv:
     def __init__(self):
@@ -23,7 +23,7 @@ class YouseeTv:
         if os.path.isfile(self.cookieFile):
             self.cookieJar.load(self.cookieFile)
 
-        opener = urllib2.build_opener(urllib2.HTTPCookieProcessor(self.cookieJar))
+        opener = urllib2.build_opener(LoginHTTPRedirectHandler, urllib2.HTTPCookieProcessor(self.cookieJar))
         urllib2.install_opener(opener)
 
         if danishaddons.ADDON.getSetting('username') == '' or danishaddons.ADDON.getSetting('password') == '':
@@ -35,12 +35,14 @@ class YouseeTv:
         if doc is None:
             return
 
+        fanArt = os.path.join(danishaddons.ADDON.getAddonInfo('path'), '/fanart.jpg')
+
         for channel in doc.findall('channels/channel'):
             name = channel.findtext('name')
             logoLarge = channel.findtext('logo_large')
 
             item = xbmcgui.ListItem(name, iconImage = logoLarge)
-            item.setProperty('Fanart_Image', FANART)
+            item.setProperty('Fanart_Image', fanArt)
             url = danishaddons.ADDON_PATH + '?xml=' + channel.findtext('xml').replace(' ', '%20')
             xbmcplugin.addDirectoryItem(danishaddons.ADDON_HANDLE, url, item)
 
@@ -72,28 +74,44 @@ class YouseeTv:
         username = danishaddons.ADDON.getSetting('username')
         password = danishaddons.ADDON.getSetting('password')
 
-        postData = urllib.urlencode({'username' : username, 'password' : password, 'remember' : 0})
-        req = urllib2.Request('http://yousee.tv/sso/login', postData)
+        postData = urllib.urlencode({'Username' : username, 'Password' : password, 'SucessURl' : LOGIN2_URL})
+        req = urllib2.Request(LOGIN1_URL, postData)
         res = urllib2.urlopen(req)
+        res.close()
+
         self.cookieJar.save(self.cookieFile)
 
-        # 1 means logged in ok
-        return res.read() == '1'
-    
     def loadDocForChannel(self, slug = 'dr1'):
-        loggedIn = False
-        for cookie in self.cookieJar:
-            if cookie.name == 'encyspro':
-                loggedIn = True
-                break
+        if not self.isLoggedIn():
+            self.login()
 
-        if not loggedIn and not self.login():
-            xbmcgui.Dialog().ok(danishaddons.msg(30010), danishaddons.msg(30011))
-            return None
+            # if still not logged in - bail out
+            if not self.isLoggedIn():
+                xbmcgui.Dialog().ok(danishaddons.msg(30010), danishaddons.msg(30011))
+                return None
 
         xml = danishaddons.web.downloadUrl(URL % slug)
         doc = ElementTree.fromstring(xml)
         return doc
+
+    def isLoggedIn(self):
+        loggedIn = False
+        for cookie in self.cookieJar:
+            print cookie
+            if cookie.name == 'yspro':
+                loggedIn = True
+                break
+        return loggedIn
+
+
+class LoginHTTPRedirectHandler(urllib2.HTTPRedirectHandler):
+    def http_error_302(self, req, fp, code, msg, headers):
+        # patch url to inject / before parameters to avoid [...].dk?param
+        url = headers.getheaders('location')[0].replace('?', '/?')
+        print "url: %s" % url
+
+        new = self.redirect_request(req, fp, code, msg, headers, url)
+        return self.parent.open(new)
 
 
 if __name__ == '__main__':
