@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.yousee.tv" version="1.0.0" name="YouSee Web-tv" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.yousee.tv" version="1.0.1" name="YouSee Web-tv" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.danishaddons" version="1.1.0"/>
